--- a/src/java/com/articulate/calendar/gui/CalendarFrame.form
+++ b/src/java/com/articulate/calendar/gui/CalendarFrame.form
@@ -120,14 +120,12 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                              <Component id="decrementButton_" min="-2" max="-2" attributes="0"/>
+                              <Component id="decrementButton_" min="-2" pref="44" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="todayButton_" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="incrementButton_" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="daysPanelLabel_" min="-2" pref="107" max="-2" attributes="0"/>
-                              <EmptySpace pref="520" max="32767" attributes="0"/>
+                              <Component id="incrementButton_" min="-2" pref="42" max="-2" attributes="0"/>
+                              <EmptySpace pref="614" max="32767" attributes="0"/>
                           </Group>
                           <Component id="daysPanel_" alignment="0" max="32767" attributes="0"/>
                       </Group>
@@ -140,7 +138,6 @@
                                   <Component id="decrementButton_" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="todayButton_" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="incrementButton_" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="daysPanelLabel_" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                               <Component id="daysPanel_" max="32767" attributes="0"/>
@@ -182,14 +179,6 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="incrementButton_ActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="javax.swing.JLabel" name="daysPanelLabel_">
-                      <Properties>
-                        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                          <Font name="Tahoma" size="12" style="0"/>
-                        </Property>
-                        <Property name="text" type="java.lang.String" value="September 2016"/>
-                      </Properties>
-                    </Component>
                     <Container class="javax.swing.JPanel" name="daysPanel_">
                       <Events>
                         <EventHandler event="componentResized" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="daysPanel_ComponentResized"/>
@@ -203,7 +192,7 @@
                         </DimensionLayout>
                         <DimensionLayout dim="1">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <EmptySpace min="0" pref="524" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="526" max="32767" attributes="0"/>
                           </Group>
                         </DimensionLayout>
                       </Layout>
