--- a/src/java/com/articulate/calendar/gui/CalendarFrame.form
+++ b/src/java/com/articulate/calendar/gui/CalendarFrame.form
@@ -120,12 +120,12 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                              <Component id="decrementButton_" min="-2" pref="44" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="decrementButton_" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                               <Component id="todayButton_" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="incrementButton_" min="-2" pref="42" max="-2" attributes="0"/>
-                              <EmptySpace pref="614" max="32767" attributes="0"/>
+                              <Component id="incrementButton_" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace pref="628" max="32767" attributes="0"/>
                           </Group>
                           <Component id="daysPanel_" alignment="0" max="32767" attributes="0"/>
                       </Group>
