--- a/src/java/com/articulate/calendar/gui/CalendarFrame.form
+++ b/src/java/com/articulate/calendar/gui/CalendarFrame.form
@@ -35,7 +35,7 @@
   <SubComponents>
     <Container class="javax.swing.JSplitPane" name="topHorizontalSplitPane_">
       <Properties>
-        <Property name="dividerLocation" type="int" value="100"/>
+        <Property name="dividerLocation" type="int" value="190"/>
       </Properties>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout"/>
@@ -50,7 +50,7 @@
           <Layout>
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="99" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="189" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
@@ -62,7 +62,7 @@
         </Container>
         <Container class="javax.swing.JSplitPane" name="calendarAndTasksHorizontalSplitPane_">
           <Properties>
-            <Property name="dividerLocation" type="int" value="800"/>
+            <Property name="dividerLocation" type="int" value="700"/>
           </Properties>
           <Events>
             <EventHandler event="componentResized" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="calendarAndTasksHorizontalSplitPane_ComponentResized"/>
@@ -85,7 +85,7 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <EmptySpace min="0" pref="150" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="160" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
@@ -125,7 +125,9 @@
                               <Component id="todayButton_" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="incrementButton_" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace pref="628" max="32767" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="daysPanelLabel_" min="-2" pref="151" max="-2" attributes="0"/>
+                              <EmptySpace pref="373" max="32767" attributes="0"/>
                           </Group>
                           <Component id="daysPanel_" alignment="0" max="32767" attributes="0"/>
                       </Group>
@@ -138,6 +140,7 @@
                                   <Component id="decrementButton_" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="todayButton_" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="incrementButton_" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="daysPanelLabel_" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                               <Component id="daysPanel_" max="32767" attributes="0"/>
@@ -192,11 +195,16 @@
                         </DimensionLayout>
                         <DimensionLayout dim="1">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <EmptySpace min="0" pref="526" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="525" max="32767" attributes="0"/>
                           </Group>
                         </DimensionLayout>
                       </Layout>
                     </Container>
+                    <Component class="javax.swing.JLabel" name="daysPanelLabel_">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="jLabel1"/>
+                      </Properties>
+                    </Component>
                   </SubComponents>
                 </Container>
                 <Container class="javax.swing.JPanel" name="eventsPanel_">
@@ -209,7 +217,7 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="eventsScrollPane_" alignment="0" pref="797" max="32767" attributes="0"/>
+                          <Component id="eventsScrollPane_" alignment="0" pref="697" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                     <DimensionLayout dim="1">
